fixed styling of results side + made comparison bars visible

--- a/styles/results.css
+++ b/styles/results.css
@@ -4,11 +4,11 @@
     
     display: flex;
     color: white;
-    font-size: 2.25vh;
+    font-size: 1.5em;
 
     h1 {
         margin-top: 0; /* Remove default margin from header1s*/
-        font-size: 3.5vh;
+        font-size: 1.75em;
     }
     
 }
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     width: 33%;
-    padding: 5vh;
+    padding: 4%;
 }
 
 /* Inputs and results wrap when screen not wide enough */
@@ -31,11 +31,24 @@
 
     .left-side, .middle, .right-side{
         width: 100%;
-        padding: 3vh;
+        padding: 5%;
     }
 
 }
+#desiredRange, #fullCharge, #stateOfCharge{
+    font-size: 3em;
+}
 
+.multiple-options{
+    flex-direction: column;
+}
+
+.comparison-bar{
+    height: 10px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: fuchsia;
+}
 
 .left-side{
     background: rgb(56,140,204);
